# monitor

./: .release-plz.toml  Cargo.toml  README.md
.github/workflows/: release-plz.yml
failing-program/: CHANGELOG.md  Cargo.toml
failing-program/src/: main.rs
src/: main.rs
