[package]
name = "monitor"
version = "1.0.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]

[workspace]
members = ["failing-program"]

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "failing-program"
path = "failing-program/src/main.rs"

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
simple_logger = "4.3.3"
