[package]
name = "monitor"
version = "1.0.0"
edition = "2021"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]

[workspace]
members = ["failing-program"]

[[bin]]
name = "failing-program"
path = "failing-program/src/main.rs"

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
dirs = "5.0.1"
log = "0.4.21"
simple_logger = "4.3.3"
which = "6.0.0"
